First commit to add feature flag to fission. needs testing.

--- a/charts/fission-all/values.yaml
+++ b/charts/fission-all/values.yaml
@@ -99,3 +99,9 @@ pruneInterval: 60
 
 ## Fission pre-install/pre-upgrade checks live in this image
 preUpgradeChecksImage: fission/pre-upgrade-checks
+
+canaryDeployment:
+  enabled: true
+  ## set this flag to true if prometheus needs to be deployed along with fission
+  prometheusDeploy: true
+
